preventing markerdot from getting squished

--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/ExpandMarker/ExpandMarker.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyList/ExpandMarker/ExpandMarker.module.scss
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-grow: 0;
+  flex-shrink: 0;
 
   .arrow {
     width: 10px;
